Buat lah deklarasi variable dan pengambilan nilai dengan menggunakan id

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -22,7 +26,7 @@
         android:layout_width="88dp"
         android:layout_height="115dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/rs" />
+        android:src="@drawable/logo_rs" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +40,7 @@
             android:text="Nama Pasien" />
 
         <EditText
-            android:id="@+id/Nama"
+            android:id="@+id/nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -49,13 +53,13 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/Penyakit"
+            android:id="@+id/TextView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Penyakit         " />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/penyakit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -71,11 +75,19 @@
             android:layout_height="wrap_content"
             android:text=" Kamar            " />
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="259dp"
-            android:layout_height="wrap_content" />
     </LinearLayout>
+
+        <Spinner
+            android:id="@+id/spinnerKamar"
+            android:layout_width="378dp"
+            android:layout_height="wrap_content"
+            android:entries="@array/kamar" />
+
+        <Spinner
+            android:id="@+id/spinnerNamaKamar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/textView3"
@@ -118,23 +130,26 @@
         android:orientation="horizontal">
 
         <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pelajar" />
-
-        <CheckBox
-            android:id="@+id/checkBox2"
+            android:id="@+id/checkBoxB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Mahasiswa" />
+            android:text="Balita" />
 
         <CheckBox
-            android:id="@+id/checkBox3"
+            android:id="@+id/checkBoxA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pegawai" />
+            android:checked="false"
+            android:text="Anak-anak" />
+
+        <CheckBox
+            android:id="@+id/checkBoxD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Dewasa" />
+
     </LinearLayout>
 
     <Button
@@ -145,9 +160,14 @@
         android:text="OK" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewHasil"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
+        android:padding="16dp"
+        tools:text="hasil" />
 
 </LinearLayout>
+</ScrollView>
