--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_width="88dp"
         android:layout_height="115dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo_rs" />
+        android:src="@drawable/rs" />
 
     <LinearLayout
         android:layout_width="match_parent"
